--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@anandamideio/entity",
   "main": "dist/index.js",
   "version": "1.1.0",
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "@types/eslint": "^8.56.7",
