--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@anandamideio/entity",
   "main": "dist/index.js",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "scripts": {
     "build": "tsc -p tsconfig.json"
   },
   "devDependencies": {
-    "@eslint/js": "^8.57.0",
-    "@types/eslint": "^8.56.7",
+    "@eslint/js": "^9.1.1",
+    "@magik_io/lint_golem": "^1.3.0",
+    "@types/eslint": "^8.56.10",
     "@types/eslint__js": "^8.42.3",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.4",
-    "typescript-eslint": "^7.5.0"
+    "eslint": "^9.1.1",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   },
   "packageManager": "yarn@4.1.1"
 }
